--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,8 +1,8 @@
 <footer class="footer mt-auto py-3">
   <div class="container">
     <div class="row">
-      <div class="offset-md-8"></div>
-      <div class="col-md-4">{{version}}</div>
+      <div class="offset-md-10"></div>
+      <div class="col-md-2">Version {{version}}</div>
     </div>
   </div>
 </footer>
