--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <app-navbar></app-navbar>
-<div class="container">
-  <router-outlet></router-outlet>
-</div>
+<main role="main" class="flex-shrink-0">
+  <div class="container">
+    <router-outlet></router-outlet>
+  </div>
+</main>
 <app-footer></app-footer>
